# aidbg

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
src/: __init__.py
src/presentation/cli/: main.py
