[project]
name = "aidbg"
version = "0.1.0"
description = "AI-powered CLI debugger"
authors = [
    {name = "Thanka Bharathi",email = "thankabharathi0@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.21.1,<0.22.0)",
    "rich (>=14.2.0,<15.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "aiofiles (>=25.1.0,<26.0.0)"
]


[project.optional-dependencies]
openai = ["anthropic (>=0.76.0,<0.77.0)"]
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pre-commit (>=4.5.1,<5.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "ruff (>=0.14.13,<0.15.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-mock (>=3.15.1,<4.0.0)",
    "ipython (>=9.9.0,<10.0.0)",
    "ipdb (>=0.13.13,<0.14.0)"
]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.ruff]
line-length = 88
[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "S",   # flake8-bandit
    "SIM", # flake8-simplify
    "RUF", # Ruff-specific rules
]
ignore = ["E501", "B008"]
fixable = ["ALL"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = """
-ra
--strict-markers
--cov=src
--cov-branch
--cov-report=term-missing
--cov-report=html
--cov-report=xml
--cov-fail-under=80
"""

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.poetry.extras]
ai = ["openai", "anthropic"]
all = ["openai", "anthropic"]
